update season code; java compatibility update